# PkmGCTools

./: CMakeLists.txt
LibPkmGC/: CMakeLists.txt
LibPkmGC/include/LibPkmGC/Base/: Pokemon.h
LibPkmGC/include/LibPkmGC/XD/Common/: Pokemon.h
LibPkmGC/src/LibPkmGC/Colosseum/Common/: Pokemon.cpp
LibPkmGC/src/LibPkmGC/Core/: Crypto.cpp  PokemonInfo.cpp
LibPkmGC/src/LibPkmGC/Core/Detail/: RibbonDescriptions.cpp
LibPkmGC/src/LibPkmGC/GBA/: Pokemon.cpp  PokemonString.cpp
LibPkmGC/src/LibPkmGC/GC/Common/: BagData.cpp
LibPkmGC/src/LibPkmGC/XD/Common/: Pokemon.cpp
PkmGCSaveEditor/: CMakeLists.txt
